# fsd_ws

./: .gitignore  test_car.urdf
src/detection_msgs/: CMakeLists.txt  package.xml
src/fsd_perception/: CMakeLists.txt  package.xml
src/fsd_perception/launch/: full_perception.launch  yolov10_detection.launch
src/fsd_perception/scripts/: lidar_cone_detector.py  sensor_fusion.py  yolov10_detector.py
src/fsd_perception/urdf/: fsd_car.urdf.xacro
src/fsd_perception/worlds/: fsd_track.world
