<?xml version="1.0"?>
<package format="2">
  <name>detection_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for cone detection bounding boxes.</description>
  <maintainer email="your_email@todo.todo">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>           <depend>geometry_msgs</depend>      <export>
    <architecture_independent/>
  </export>
</package>
